Trying again to make sure everything is visible even when window is really small.

--- a/Homework1/Part2/css/style.css
+++ b/Homework1/Part2/css/style.css
@@ -13,7 +13,8 @@ body {
     position: fixed;
     right: 0;
     top: 0;
-    width: 20vw;
+    /* width: 20vw; */
+    width: fit-content;
     height: 100vh;
     
     background-color: rgb(128, 0, 0);
@@ -99,7 +100,8 @@ body {
     background-color: rgb(128, 0, 0);
     padding: 10px;
     border-radius: 10px;
-    width: 20vw;
+    /* width: 20vw; */
+    width: fit-content;
     float: left;
 }
 
@@ -117,7 +119,8 @@ body {
 
 
  .headerRight {
-    margin-bottom: 10px;
+    position: relative;
+    z-index: 99;
     display: flex;
     flex-direction: row-reverse;
     justify-content: right;
@@ -244,6 +247,8 @@ body {
     color: white;
     border-radius: 10px;
     font-size: larger;
+    min-height: 30px;
+    min-width: 30px;
 }
 
 #settingsbutton {
@@ -252,6 +257,8 @@ body {
     font-size: larger;
     background-color: rgb(151, 148, 148);
     border-radius: 10px;
+    min-height: 30px;
+    min-width: 30px;
 }
 
 #notificationsbutton {
@@ -261,6 +268,8 @@ body {
     background-color: rgb(151, 148, 148);
     border-radius: 10px;
     color: rgb(255, 255, 0);
+    min-height: 30px;
+    min-width: 30px;
 }
 
 #messagesButton > span {
@@ -276,6 +285,8 @@ body {
     background-color: rgb(151, 148, 148);
     color: rgb(255, 255, 255);
     border-radius: 10px;
+    min-height: 30px;
+    min-width: 30px;
 }
 
 #sidebarsettings {
